# modelo_reset

./: .gitignore  Ogay.kml  README.md  Untitled-1.html  main.py  make.bat  modelo_reset.py  pyproject.toml  t.py  teste.py  tratamento.ipynb
core/: a.py  analysis.py  b.py  data_loader.py  ibge_downloader.py  network_design.py  visualization.py  workflow.py
limites_bairros_moc/: limites_bairros_moc.dbf  limites_bairros_moc.qmd  limites_bairros_moc.shp  limites_bairros_moc.shx  municipios_MG_aprovacao_ideb.xlsx
modelo_reset/: __init__.py
modelo_reset/core/: analysis.py  data_exporter.py  data_loader.py  ibge_downloader.py  network_design.py  visualization.py  workflow.py
planilhas/: Agregados_por_setores_renda_responsavel_BR.csv
src/modelo_reset/core/: ag.py  analysis.py  data_exporter.py  data_loader.py  ibge_downloader.py  network_design.py  visualization.py  workflow.py
src/modelo_reset/utils/: columns.py  constants.py
test/test_core/: test_analysis.py  test_data_loader.py  test_ibge_downloader.py  test_visualization.py  test_workflow.py
utils/: constants.py  geracao_dados_origem_destino.py  utils.py
